[gd_scene load_steps=11 format=3 uid="uid://dlwdtqdqrxetf"]

[ext_resource type="Texture2D" uid="uid://dr0ihltm5uym3" path="res://Grafika/Enemies/Suicide.png" id="1_cjel5"]
[ext_resource type="Script" path="res://scenes/Enemies/suicide.gd" id="1_t0i4h"]
[ext_resource type="AudioStream" uid="uid://dcapq14hn0jrm" path="res://Sounds/hit_solid.wav" id="3_k0s1a"]
[ext_resource type="Texture2D" uid="uid://d3dp4ul1qnxb6" path="res://Grafika/plane/Explosion.png" id="4_n1wvb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rtprh"]
radius = 20.0998

[sub_resource type="CircleShape2D" id="CircleShape2D_6idpi"]
radius = 294.002

[sub_resource type="CircleShape2D" id="CircleShape2D_whmp8"]
radius = 26.0

[sub_resource type="Animation" id="Animation_wiwt5"]
resource_name = "Explosion"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_a1o72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rj6n"]
_data = {
"Explosion": SubResource("Animation_wiwt5"),
"RESET": SubResource("Animation_a1o72")
}

[node name="Suicide" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_t0i4h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cjel5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rtprh")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_6idpi")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_whmp8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_k0s1a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rj6n")
}

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_n1wvb")
hframes = 8
frame = 1

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
